2004-10-31  Jim Blandy  <jimb@redhat.com>

	* linux-target.c (decr_pc_after_break): Fix printf format
	directive to match arguments.
	* ptrace-target.c (ptrace_singlestep_program): Same.
	(ptrace_continue_program): Same.
	* server.c (invalid_speed): Same.
	* thread-db.c (thread_db_open, wait_all_threads) 
	(thread_db_check_child_state, thread_db_get_thread_reg) 
	(thread_db_set_thread_reg): Same.

	* linux-target.c (linux_get_reg): When register REGNO doesn't exist, 
	provide zeros for its value; don't use an uninitialized pointer.

2004-10-29  Jim Blandy  <jimb@redhat.com>

	* linux-target.c (linux_set_reg): Delete unused variables.
	* ptrace-target.c (ptrace_read_user, ptrace_check_child_state):
	Same.
	* thread-db.c (continue_all_threads, thread_db_attach): Same.

	* linux-target.c (x86_make_arch): Use allocate_empty_arch.

	* linux-target.c: #include <string.h>, <sys/types.h>, and
	<sys/wait.h> to get declarations for system functions used in this
	file.

	* gdbserv-thread-db.h (stop_lwp, handle_waitstatus, ps_pdread,
	ps_pdwrite): Add declarations for these functions to
	gdbserv-thread-db.h.

	* Makefile.am (AM_CFLAGS): Add '-Wall'.
	* Makefile.in: Update.

2004-10-26  Jim Blandy  <jimb@redhat.com>

	Add an architecture object to the Unix server.
	* arch.h: New header file.
	* server.h (struct arch): New forward struct declaration.
	(struct child_process): Add an 'arch' member to the process.
	* thread-db.c: #include arch.h.
	* linux-target.c: #include arch.h.
	(allocate_empty_arch): New function.
	(x86_make_arch): New function.
	(MAKE_ARCH): New #definition.
	(linux_attach): Initialize process's architecture.

	Provide arch-independent framework for breakpoints.
	* server.h (struct arch_bp_table): New forward struct declaration.
	(struct child_process): New member: 'breakpoint_table'.
	* linux-target.c (linux_attach): Initialize process's breakpoint
	table, if the architecture defines a breakpoint table constructor.